--- a/client/src/style/login.css
+++ b/client/src/style/login.css
@@ -6,9 +6,25 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: white;
+    border-radius: 20px;
 }
 
 .contentLogin form {
     display: flex;
     flex-direction: column;
+}
+.containerLogin{
+    background-color: #e8e8e8;
+    padding: 10vw 20vw;
+}
+.contentLogin form input{
+    border: 2px solid #818181;
+    border-radius: 5px;
+    width: 300px;
+    height: 35px;
+    margin: 10px 0px;
+}
+.containerLogin form input::placeholder{
+    padding-left: 10px;
 }
