--- a/client/src/style/login.css
+++ b/client/src/style/login.css
@@ -8,32 +8,67 @@
 }
 .contentLogin {
     display: flex;
+    width: auto;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: white;
-    border-radius: 20px;
+    border-radius: 30px;
+    height: 500px;
+    width: 1000px;
 }
 
 .contentLogin form {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .containerLogin{
     background-color: #e8e8e8;
     padding: 10vw 20vw;
 }
 .contentLogin form input{
-    border: 2px solid #818181;
+    border: 2px solid #e8e8e8;
     border-radius: 5px;
     width: 300px;
-    height: 35px;
+    height: 40px;
     margin: 10px 0px;
 }
 .containerLogin form input::placeholder{
     padding-left: 10px;
 }
 .containerLogin h1{
-    color: #8044CC
-    ;
+    color: #8044CC;
+    font-family: "Inter", sans-serif;
+    margin-bottom: 30px;
+    font-size: 50px;
+}
+.Button{
+    background-color: #8044CC;
+            color: white;
+            border: none;
+            padding: 15px 40px;
+            text-align: center;
+            font-size: 16px;
+            border-radius: 10px;
+            cursor: pointer;
+            display: inline-block;
+            transition: background-color 0.3s ease;
+            margin: 10px auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: "Inter", sans-serif;
+            width: 300px;
+            height: 45px;
+}
+.contentLogin p a{
+    color: #d436cd;
+    margin-top: 100px;
+    font-family: "Kanit", sans-serif;
+}
+.contentLogin p{
+    margin-top: 40px;
+    font-family: "Kanit", sans-serif;
 }
