--- a/client/src/style/login.css
+++ b/client/src/style/login.css
@@ -15,7 +15,7 @@
     background-color: white;
     border-radius: 30px;
     height: 500px;
-    width: 1000px;
+    width: 100%;
 }
 
 .contentLogin form {
@@ -46,22 +46,22 @@
 }
 .Button{
     background-color: #8044CC;
-            color: white;
-            border: none;
-            padding: 15px 40px;
-            text-align: center;
-            font-size: 16px;
-            border-radius: 10px;
-            cursor: pointer;
-            display: inline-block;
-            transition: background-color 0.3s ease;
-            margin: 10px auto;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-family: "Inter", sans-serif;
-            width: 300px;
-            height: 45px;
+    color: white;
+    border: none;
+    padding: 15px 40px;
+    text-align: center;
+    font-size: 16px;
+    border-radius: 10px;
+    cursor: pointer;
+    display: inline-block;
+    transition: background-color 0.3s ease;
+    margin: 10px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Inter", sans-serif;
+    width: 300px;
+    height: 45px;
 }
 .contentLogin p a{
     color: #d436cd;
