--- a/client/src/style/login.css
+++ b/client/src/style/login.css
@@ -14,9 +14,10 @@
     justify-content: center;
     background-color: white;
     border-radius: 30px;
-    height: 500px;
-    width: 100%;
-}
+    height: 400px;
+    width: auto;
+    margin-left: auto;
+}s
 
 .contentLogin form {
     display: flex;
@@ -31,9 +32,10 @@
 .contentLogin form input{
     border: 2px solid #e8e8e8;
     border-radius: 5px;
-    width: 300px;
+    width: 175px;
     height: 40px;
     margin: 10px 0px;
+    margin-left: 75px;
 }
 .containerLogin form input::placeholder{
     padding-left: 10px;
@@ -41,27 +43,26 @@
 .containerLogin h1{
     color: #8044CC;
     font-family: "Inter", sans-serif;
-    margin-bottom: 30px;
-    font-size: 50px;
+    font-size: 70px;
 }
 .Button{
     background-color: #8044CC;
-    color: white;
-    border: none;
-    padding: 15px 40px;
-    text-align: center;
-    font-size: 16px;
-    border-radius: 10px;
-    cursor: pointer;
-    display: inline-block;
-    transition: background-color 0.3s ease;
-    margin: 10px auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: "Inter", sans-serif;
-    width: 300px;
-    height: 45px;
+            color: white;
+            border: none;
+            padding: 15px 40px;
+            text-align: center;
+            font-size: 16px;
+            border-radius: 10px;
+            cursor: pointer;
+            display: inline-block;
+            transition: background-color 0.3s ease;
+            margin: 10px auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: "Inter", sans-serif;
+            width: 200px;
+            height: 45px;
 }
 .contentLogin p a{
     color: #d436cd;
@@ -69,6 +70,6 @@
     font-family: "Kanit", sans-serif;
 }
 .contentLogin p{
-    margin-top: 40px;
+    margin-top: 10px;
     font-family: "Kanit", sans-serif;
 }
