--- a/client/src/style/login.css
+++ b/client/src/style/login.css
@@ -43,7 +43,7 @@
     color: #8044CC;
     font-family: "Inter", sans-serif;
     font-size: 40px;
-    padding: 0px 0px;
+    margin-bottom: 20px;
 }
 .Button {
     background-color: #8044CC;
@@ -83,13 +83,15 @@
 .contentLogin h1{
     font-size: 80px;
 }
+
 @media screen and (max-width: 393px) {
     .Contact{
         font-size: 15px;
     }
     .contentLogin form input{
-        width: 120px;
-        height: 30px
+        width: 220px;
+        height: 35px;
+        margin: 5px 0;
     }
     .containerLogin{
         padding: 5vw 10vw;
@@ -106,7 +108,7 @@
         font-size: 13px;
     }
     .contentLogin h1{
-        font-size: 50px;
+        font-size: 30px;
     }
     .contentLogin p{
         font-size: 12px;
