--- a/client/src/style/login.css
+++ b/client/src/style/login.css
@@ -84,7 +84,7 @@
     font-size: 80px;
 }
 
-@media screen and (max-width: 393px) {
+@media screen and (max-width: 500px) {
     .Contact{
         font-size: 15px;
     }
@@ -100,17 +100,94 @@
         font-size: 10px;
     }
     .navfooter ul li a{
-        font-size: 10px;
+        font-size: 12px;
     }
     .Button{
-        width: 120px;
+        width: 220px;
         height: 20px;
         font-size: 13px;
     }
     .contentLogin h1{
-        font-size: 30px;
+        font-size: 50px;
     }
     .contentLogin p{
         font-size: 12px;
+    }
+    .footer h1{
+        font-size: 20px;
+    }
+}
+@media screen and (max-width: 2200px) {
+    .Contact{
+        font-size: 20px;
+    }
+    .contentLogin form input{
+        width: 600px;
+        height: 60px;
+        margin: 5px 0;
+    }
+    .containerLogin{
+        padding: 5vw 10vw;
+    }
+    .headerLogin ul li a{
+        font-size: 30px;
+        padding: 50px;
+    }
+    .navfooter ul li a{
+        font-size: 30px;
+    }
+    .Button{
+        width: 600px;
+        height: 40px;
+        font-size: 13px;
+    }
+    .contentLogin h1{
+        font-size: 80px;
+    }
+    .contentLogin p{
+        font-size: 25px;
+    }
+    .footer h1{
+        font-size: 40px;
+    }
+    .containerLogin form input::placeholder{
+        font-size: 20px;
+    }
+}
+@media screen and (max-width: 393px) {
+    .Contact{
+        font-size: 20px;
+    }
+    .contentLogin form input{
+        width: 220px;
+        height: 35px;
+        margin: 5px 0;
+    }
+    .containerLogin{
+        padding: 5vw 10vw;
+    }
+    .headerLogin ul li a{
+        font-size: 10px;
+        padding: 5px;
+    }
+    .navfooter ul li a{
+        font-size: 10px;
+    }
+    .Button{
+        width: 220px;
+        height: 20px;
+        font-size: 13px;
+    }
+    .contentLogin h1{
+        font-size: 50px;
+    }
+    .contentLogin p{
+        font-size: 15px;
+    }
+    .footer h1{
+        font-size: 20px;
+    }
+    .containerLogin form input::placeholder{
+        font-size: 13px;
     }
 }
