--- a/client/src/style/login.css
+++ b/client/src/style/login.css
@@ -12,3 +12,9 @@
     display: flex;
     flex-direction: column;
 }
+
+@media screen and (max-width:483px) {
+    .headerLogin nav ul li a{
+        font-size: 14px;
+    }
+}
