fix sidebar and text Link in Sidebar

--- a/client/src/style/ariamairu.css
+++ b/client/src/style/ariamairu.css
@@ -12,7 +12,9 @@
   .with-sidebar {
     margin-left: 250px;
   }
-  
+  .burger {
+    z-index: -9;
+  }
   .form-container {
     display: flex;
     justify-content: space-between;
