--- a/client/src/style/Sidebar.css
+++ b/client/src/style/Sidebar.css
@@ -1,14 +1,14 @@
 .sidebar {
   width: 250px;
-  background-color: #2e2e2e;
+  background-color: #2A2D39;
   color: white;
-  padding: 20px;
+  /* padding: 20px; */
   height: 100vh;
   position: fixed;
   left: -250px;
   top: 0;
   transition: left 0.3s;
-  z-index: 5;
+  z-index: 9;
 }
 
 .sidebar.open {
@@ -21,16 +21,20 @@
 }
 
 .sidebar ul li {
-  margin: 15px 0;
+  /* margin: 15px 0; */
+  padding: 12px 0;
+  padding-left: 30px;
 }
 
+
 .logout-btn {
-  background-color: red;
+  background-color: rgb(0, 145, 255);
   color: white;
   padding: 10px;
   border: none;
   width: 100%;
   margin-top: 20px;
+  border-radius: 10px;
 }
 .close-btn {
   font-size: 30px;
@@ -39,4 +43,6 @@
   top: 10px;
   right: 20px;
 }
-
+.active {
+  background-color: #5a5c66;
+}
