--- a/client/src/style/Sidebar.css
+++ b/client/src/style/Sidebar.css
@@ -2,13 +2,14 @@
   width: 250px;
   background-color: #2A2D39;
   color: white;
-  /* padding: 20px; */
+  padding: 20px;
   height: 100vh;
   position: fixed;
   left: -250px;
   top: 0;
-  transition: left 0.3s;
+  transition: all 0.3s;
   z-index: 9;
+  overflow: hidden;
 }
 
 .sidebar.open {
@@ -23,7 +24,8 @@
 .sidebar ul li {
   /* margin: 15px 0; */
   padding: 12px 0;
-  padding-left: 30px;
+  padding-left: 10px;
+  padding-bottom: 12px;
 }
 
 
@@ -33,8 +35,9 @@
   padding: 10px;
   border: none;
   width: 100%;
-  margin-top: 20px;
+  margin-top: 323px;
   border-radius: 10px;
+  
 }
 .close-btn {
   font-size: 30px;
